add footer for page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="grid wide">
             <div class="reason-use">
                 <div class="row">
-                    <div class="col l-12">
+                    <div class="col l-12 m-12 c-12">
                         <h2 class="reson-use__title">Ví điện tử MoMo - Siêu ứng dụng thanh toán số 1 Việt Nam</h2>
                     </div>
                 </div>
@@ -459,9 +459,133 @@
                 </div>
             </div>
         </div>
+        <div class="watch-news">
+            <h2 class="news__heading">Có gì mới?</h2>
+            <ul class="news__list">
+                <li class="news__item">Mới nhất</li>
+                <li class="news__item">Tin tức - Sự kiện</li>
+                <li class="news__item">Khuyến mãi</li>
+                <li class="news__item">Thông cáo báo chí</li>
+                <li class="news__item">Blog</li>
+            </ul>
+            <div class="grid wide">
+                <div class="row news__list-content">
+                    <div class="col l-3 m-6 c-12 news__item-content">
+                        <a href="#" class="content__wrap">
+                            <img src="https://static.mservice.io/blogscontents/s770x370/momo-upload-api-201208173119-637430454791096905.jpg" alt="" class="news__content-img">
+                            <p class="news__content-text">Giới thiệu MoMo: Cùng rinh combo 500.000đ vui đón Giáng Sinh</p>
+                        </a>
+                        <div class="news__discount">
+                            <a href="#" class="news__discount-link">Khuyến mãi</a>
+                            <p class="news__discount-time">7 giờ trước</p>
+                        </div>
+                    </div>
+                    <div class="col l-3 m-6 c-12 news__item-content">
+                        <a href="#" class="content__wrap">
+                            <img src="https://static.mservice.io/blogscontents/s770x370/momo-upload-api-201208173119-637430454791096905.jpg" alt="" class="news__content-img">
+                            <p class="news__content-text">Giới thiệu MoMo: Cùng rinh combo 500.000đ vui đón Giáng Sinh</p>
+                        </a>
+                        <div class="news__discount">
+                            <a href="#" class="news__discount-link">Khuyến mãi</a>
+                            <p class="news__discount-time">7 giờ trước</p>
+                        </div>
+                    </div>
+                    <div class="col l-3 m-6 c-12 news__item-content">
+                        <a href="#" class="content__wrap">
+                            <img src="https://static.mservice.io/blogscontents/s770x370/momo-upload-api-201208173119-637430454791096905.jpg" alt="" class="news__content-img">
+                            <p class="news__content-text">Giới thiệu MoMo: Cùng rinh combo 500.000đ vui đón Giáng Sinh</p>
+                        </a>
+                        <div class="news__discount">
+                            <a href="#" class="news__discount-link">Khuyến mãi</a>
+                            <p class="news__discount-time">7 giờ trước</p>
+                        </div>
+                    </div>
+                    <div class="col l-3 m-6 c-12 news__item-content">
+                        <a href="#" class="content__wrap">
+                            <img src="https://static.mservice.io/blogscontents/s770x370/momo-upload-api-201208173119-637430454791096905.jpg" alt="" class="news__content-img">
+                            <p class="news__content-text">Giới thiệu MoMo: Cùng rinh combo 500.000đ vui đón Giáng Sinh</p>
+                        </a>
+                        <div class="news__discount">
+                            <a href="#" class="news__discount-link">Khuyến mãi</a>
+                            <p class="news__discount-time">7 giờ trước</p>
+                        </div>
+                    </div>
+                    <div class="wach-more__btn">
+                        <a href="#" class="wach-more__btn-link">Xem thêm</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="footer">
-
+        <div class="grid wide">
+            <div class="row footer-wrap">
+                <div class="col l-3 m-6 c-12 footer__item info-company">
+                    <p class="info__logo">MoMo</p>
+                    <h2 class="info__heading">Công ty cổ phần dịch vụ di động trực tuyến (viết tắt M_Service)</h2>
+                    <p class="info__address">Lầu M, Toà nhà Petroland, 12 Tân Trào, P. Tân Phú, Q.7, Tp. Hồ Chí Minh</p>
+                    <a href="#" class="info__link">
+                        <img src="https://static.mservice.io/styles/desktop/images/bocongthuong.png" alt="" class="info__img">
+                    </a>
+                </div>
+                <div class="col l-3 m-6 c-12 footer__item care-about-list hide-on-mobile">
+                    <a href="" class="care__item-link">Về MoMo</a>
+                    <a href="" class="care__item-link">Blog</a>
+                    <a href="" class="care__item-link">Liên hệ</a>
+                    <a href="" class="care__item-link">Tuyển dụng</a>
+                    <a href="" class="care__item-link">Điều khoản điều lệ</a>
+                    <a href="" class="care__item-link">Chính sách quyền riêng tư</a>
+                </div>
+                <div class="col l-3 m-6 c-12 footer__item customer-care">
+                    <h3 class="customer-care__heading">Chăm sóc khách hàng</h3>
+                    <ul class="customer-care__list">
+                        <li class="customer-care__item">
+                            Hotline: 
+                            <a href="#" class="customer-care__link">1900 5454 41</a>
+                            (1000 đ/phút)
+                        </li>
+                        <li class="customer-care__item">
+                            email:
+                            <a href="" class="customer-care__link">hotro@momo.vn</a>
+                        </li>
+                        <li class="customer-care__item">
+                            Tổng đài gọi ra:
+                            <a href="" class="customer-care__link">028.7306.5555</a>
+                            -
+                            <a href="" class="customer-care__link">028.7306.5555</a>
+                        </li>
+                    </ul>                    
+                </div>
+                <div class="col l-3 m-6 c-12 footer__item collab-info">
+                    <h3 class="collab-info__heading">Hợp tác doanh nghiệp</h3>
+                    <ul class="collab-info__list">
+                        <li class="collab-info__item">
+                            Hotline: 
+                            <a href="" class="collab-info__link">(028) 710 22 222</a>
+                            (ext:5000)
+                        </li>
+                        <li class="collab-info__item">
+                            Đăng kí tại: 
+                            <a href="" class="collab-info__link">business.momo.vn</a>
+                        </li>
+                    </ul>
+                    
+                </div>
+            </div>
+            <!-- <div class="row policy-socials-dowloadapps"></div> -->
+            <div class="footer__policy-socials-dowloadapps">
+                <p class="policy-copyright__text">©Copyright M_Service 2020</p>
+                <div class="socials__list">
+                    <img src="https://static.mservice.io/styles/desktop/images/social/facebook.svg" alt="" class="socials__item">
+                    <img src="https://static.mservice.io/styles/desktop/images/social/linkedin.svg" alt="" class="socials__item">
+                    <img src="https://static.mservice.io/styles/desktop/images/social/youtube.svg" alt="" class="socials__item">
+                </div>
+                <div class="dowload-apps__list">
+                    <img src="https://static.mservice.io/img/tai-appstore.png" alt="" class="dowload-apps__item">
+                    <img src="https://static.mservice.io/img/tai-google-play.png" alt="" class="dowload-apps__item">
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
