fix animation for header resposive

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                     </div>
                     <div class="col l-6 m-12 c-12 instruction__steps">
                         <li class="instruction__steps-item">
-                            <div class="instruction-item__title acctive">
+                            <div class="instruction-item__title">
                                 <span>1</span>
                                 <p>Tải ứng dụng MoMo</p>                              
                             </div>   
